--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
         /* Estilos CSS muy básicos para que sea legible */
         body { font-family: Arial, sans-serif; padding: 20px; }
         #card-form, #card-list { border: 1px solid #ccc; padding: 15px; margin-bottom: 20px; }
-        .card-item { border-bottom: 1px dashed #eee; padding: 10px 0; display: flex; justify-content: space-between; align-items: center; }
-        .card-item:last-child { border-bottom: none; }
+        
+        /* MODIFICACIÓN: Estilos para la lista semántica UL/LI */
+        #card-list ul { list-style: none; padding: 0; }
+        #card-list li { border-bottom: 1px dashed #eee; padding: 10px 0; display: flex; justify-content: space-between; align-items: center; }
+        #card-list li:last-child { border-bottom: none; }
     </style>
 </head>
 <body>
@@ -26,6 +29,17 @@
             <label for="elixirCost">Costo de Elixir:</label>
             <input type="number" id="elixirCost" name="elixirCost" min="1" max="10" required><br><br>
             
+            <label for="rarity">Rareza:</label>
+            <select id="rarity" name="rarity" required>
+                <option value="">Selecciona Rareza</option>
+                <option value="Común">Común</option>
+                <option value="Especial">Especial</option>
+                <option value="Épica">Épica</option>
+                <option value="Legendaria">Legendaria</option>
+            </select><br><br>
+
+            <label for="type">Tipo (Tropa/Hechizo/Estructura):</label>
+            <input type="text" id="type" name="type" required><br><br>
             <button type="submit" id="submit-btn">Crear Carta</button>
             <button type="button" onclick="resetForm()">Cancelar Edición</button>
         </form>
